package de.darthkali.schichten.controller

import org.springframework.stereotype.Controller

@Controller
class PizzaController {
}