@startuml
'https://plantuml.com/class-diagram
'left to right direction
!theme carbon-gray
!pragma useIntermediatePackages false

package de.darthkali.archunitpayground{
    package controller{
        class PizzaController
        class OrderController
    }

    package service{
        class PizzaService
        class OrderService
    }

    package persistence{
        class PizzaRepository
    }
}

PizzaController --> PizzaService
OrderController --> OrderService
PizzaService --> PizzaRepository
OrderService --> PizzaRepository

@enduml

